--- a/res/maintanance.html
+++ b/res/maintanance.html
@@ -125,7 +125,7 @@
         </svg>
     </div>
     <div>
-        The service is under maintanance. Please come back later.
+        Diese Seite wird derzeit bearbeitet. Bitte kommen Sie später zurück.
     </div>
 </body>
 </html>
